added vendor login and reset-password
